--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "server:debug": "node --inspect --inspect-brk server/app.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongoose": "^5.3.12",
     "morgan": "^1.9.1"
   }
 }
