--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Emily Kauffman and Ashutosh Burde",
   "license": "MIT",
   "scripts": {
-    "server:start": "nodemon server/app.js",
+    "server": "nodemon server/app.js",
     "server:debug": "node --inspect --inspect-brk server/app.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server:start\" \"yarn client\"",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "client": "cd client && yarn start"
   },
   "dependencies": {
