--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "start": "node server/app.js",
     "heroku-postbuild": "cd client && yarn install && yarn install --only=dev --no-shrinkwrap && yarn build"
   },
+  "engines": {
+    "node": "10.13.0",
+    "yarn": "1.12.3"
+  },
   "dependencies": {
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
