--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "client": "cd client && yarn start",
     "start": "node server/app.js",
-    "heroku-postbuild": "cd client && yarn install && yarn install --only=dev --no-shrinkwrap && yarn build"
+    "heroku-postbuild": "cd client && yarn install && yarn install --only=dev --no-shrinkwrap && npm run build"
   },
   "engines": {
     "node": "10.13.0",
