added in ability to pull env vars

--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "scripts": {
     "start": "node server/app.js",
     "server": "nodemon server/app.js",
+    "install": "cd client && yarn build && cd ..",
     "server:debug": "node --inspect --inspect-brk server/app.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "client": "cd client && yarn start",
-    "heroku-postbuild": "cd client && yarn install && yarn build",
-    "build": "console.log('test')"
+    "client": "cd client && yarn start"
   },
   "engines": {
     "node": "10.13.0",
