--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "author": "Emily Kauffman and Ashutosh Burde",
   "license": "MIT",
   "scripts": {
-    "start": "node server/app.js",
-    "server": "nodemon server/app.js",
+    "server": "node server/app.js",
     "server:debug": "node --inspect --inspect-brk server/app.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "client": "cd client && yarn start"
+    "start": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "client": "node start-client.js"
   },
   "engines": {
     "node": "10.13.0",
