--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "engines": {
     "node": "10.13.0",
-    "yarn": "1.12.3"
+    "npm": "6.4.1"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
