--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "scripts": {
     "start": "node app.js",
-    "start:concurrently": "concurrently \"yarn server\" \"yarn client\"",
+    "start:concurrently": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node app.js",
-    "heroku-postbuild": "cd client && yarn install && yarn build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "engines": {
     "node": "10.13.0",
