--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node app.js",
     "start:concurrently": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node app.js",
+    "server": "nodemon app.js",
     "client": "cd client && npm run start",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.7"
   }
 }
