--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "npm": "^6.4.1"
   }
 }
