--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.7",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "validator": "^10.9.0"
   }
 }
