--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:concurrently": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon app.js",
     "client": "cd client && npm run start",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "lint": "eslint ./server"
   },
   "engines": {
     "node": "10.13.0",
@@ -22,11 +23,17 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "express": "^4.16.4",
+    "express-rate-limit": "^3.3.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.7",
     "npm": "^6.4.1",
     "validator": "^10.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.10.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-security": "^1.4.0"
   }
 }
