--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
