--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "6.4.1"
   },
   "dependencies": {
+    "@duosecurity/duo_web": "^1.0.4",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
@@ -29,6 +30,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.7",
     "npm": "^6.4.1",
+    "random-string": "^0.2.0",
     "validator": "^10.9.0"
   }
 }
